@@ -26,7 +26,12 @@ Mojolicious::Command::cgi - CGI command
   Usage: APPLICATION cgi [OPTIONS]
 
   Options:
-    --nph   Enable non-parsed-header mode
+    -h, --help          Show this summary of available options
+        --home <path>   Path to your applications home directory, defaults to
+                        the value of MOJO_HOME or auto detection
+    -m, --mode <name>   Operating mode for your application, defaults to the
+                        value of MOJO_MODE/PLACK_ENV or "development"
+        --nph           Enable non-parsed-header mode
 
 =head1 DESCRIPTION
 
