@@ -38,7 +38,14 @@ Mojolicious::Command::inflate - Inflate command
 
 =head1 SYNOPSIS
 
-  Usage: APPLICATION inflate
+  Usage: APPLICATION inflate [OPTIONS]
+
+  Options:
+    -h, --help          Show this summary of available options
+        --home <path>   Path to your applications home directory, defaults to
+                        the value of MOJO_HOME or auto detection
+    -m, --mode <name>   Operating mode for your application, defaults to the
+                        value of MOJO_MODE/PLACK_ENV or "development"
 
 =head1 DESCRIPTION
 
