@@ -1,5 +1,6 @@
 
 6.24  2015-10-09
+  - Improved commands to show all options that can affect their behavior.
 
 6.23  2015-10-06
   - Improved documentation browser CSS.
